:art: Push first section down – to prevent fixed header overflow

--- a/src/sass/setup.scss
+++ b/src/sass/setup.scss
@@ -7,3 +7,6 @@ body {
   font-family: $font-family--text;
 }
 
+.page > section:first-of-type {
+  padding-top: 90px;
+}
